--- a/todo.org
+++ b/todo.org
@@ -1,7 +1,8 @@
 * TASKS
-** Judge
-*** TODO should be able to login
-*** TODO should see an overview table which has the following data:
+** v0.2
+*** Judge
+**** TODO Judge should be able to login
+**** TODO Judge should see an overview table which has the following data:
     |              | Problem 1 | Problem 2 | Problem 3 | Problem 4 |
     |--------------+-----------+-----------+-----------+-----------|
     | Contestant 1 |           |           |           |           |
@@ -9,3 +10,4 @@
     | Contestant 3 |           |           |           |           |
     | Contestant 4 |           |           |           |           |
     
+**** TODO Judge should be able to disqualify users
